pre filling nav links, add effect for dropdown content

--- a/src/home.html
+++ b/src/home.html
@@ -26,7 +26,7 @@
                         class="px-4 py-2 rounded border border-gray-300 text-lg w-[400px]" />
                     <ul class="flex flex-row gap-8 text-2xl">
                         <li class="dropdown">
-                            <button class="dropbtn flex flex-row items-center gap-2">Profil <i class="fa-solid fa-chevron-down fa-xs"></i></button>
+                            <button class="dropbtn">Profil <i class="fa-solid fa-chevron-down fa-xs"></i></button>
                             <ul class="dropdown-content text-lg">
                                 <li>Visi, Misi, & Tujuan</li>
                                 <li>Akreditasi</li>
@@ -38,15 +38,29 @@
                                 <li>Dana Pengembangan Prodi</li>
                             </ul>
                         </li>
-                        <li>
-                            <button class="dropbtn">Akademik</button>
-                            <ul class="drowpdown-content text-lg">
-                                <li></li>
+                        <li class="dropdown">
+                            <button class="dropbtn">Akademik <i class="fa-solid fa-chevron-down fa-xs"></i></button>
+                            <ul class="dropdown-content text-lg">
+                                <li>Visi, Misi, & Tujuan</li>
+                                <li>Akreditasi</li>
+                                <li>Profil Lulusan</li>
+                                <li>Kompetensi Lulusan</li>
+                                <li>Struktur Organisasi</li>
+                                <li>Tenaga Kependidikan</li>
+                                <li>Data Kerjasama P2M</li>
+                                <li>Dana Pengembangan Prodi</li>
                             </ul>
                         </li>
-                        <li>Riset</li>
-                        <li>Kemahasiswaan</li>
-                        <li>Informasi</li>
+                        <li class="dropdown">
+                            <button class="dropbtn">Riset <i class="fa-solid fa-chevron-down fa-xs"></i></button>
+                        </li>
+                        <li class="dropdown">
+                            <button class="dropbtn">Kemahasiswaan <i
+                                    class="fa-solid fa-chevron-down fa-xs"></i></button>
+                        </li>
+                        <li class="dropdown">
+                            <button class="dropbtn">Informasi <i class="fa-solid fa-chevron-down fa-xs"></i></button>
+                        </li>
                     </ul>
                 </div>
             </section>
